ajout du projet quizz et modifs

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="preload" as="image" href="./ressources/accueil.jpg" />
-    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <!-- Loader -->
@@ -188,24 +188,24 @@
               <span><strong>Soft Skills :</strong></span>
             </li>
             <li class="item-liste i1">
-              <span class="chiffre-style"></span>
-              <p class="txt-liste">1.Communication</p>
+              <span class="chiffre-style">1.</span>
+              <p class="txt-liste">Communication</p>
             </li>
             <li class="item-liste i2">
-              <span class="chiffre-style"></span>
-              <p class="txt-liste">2.Patience</p>
+              <span class="chiffre-style">2.</span>
+              <p class="txt-liste">Patience</p>
             </li>
             <li class="item-liste i3">
-              <span class="chiffre-style"></span>
-              <p class="txt-liste">3.Curiosité</p>
+              <span class="chiffre-style">3.</span>
+              <p class="txt-liste">Curiosité</p>
             </li>
             <li class="item-liste i4">
-              <span class="chiffre-style"></span>
-              <p class="txt-liste">4.Sens de l'écoute</p>
+              <span class="chiffre-style">4.</span>
+              <p class="txt-liste">Sens de l'écoute</p>
             </li>
             <li class="item-liste i5">
-              <span class="chiffre-style"></span>
-              <p class="txt-liste">5.Gestion du temps</p>
+              <span class="chiffre-style">5.</span>
+              <p class="txt-liste">Gestion du temps</p>
             </li>
           </ul>
         </div>
@@ -284,14 +284,24 @@
 
         <div class="item vague2">
           <div class="cont-img-port">
-            <img src="" width="800" height="400" alt="image projet" />
+            <img
+              src="./ressources/img-projets/quiz-js.jpg"
+              width="800"
+              height="400"
+              alt="image projet"
+            />
           </div>
-          <h3>Mon fabuleux projet</h3>
+          <h3>Projet Quiz JavaScript</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
-            dolore?
+            Projet Quiz JS de 10 questions, réalisé en
+            <strong>JavaScript</strong> natif, à vous de jouer.
           </p>
-          <a href="#" class="btn-projets">Découvrez le projet</a>
+          <a
+            href="https://oliive33.github.io/projet-quiz-app-js/"
+            class="btn-projets"
+            target="_blank"
+            >Découvrez le projet</a
+          >
         </div>
 
         <div class="item vague2">
@@ -386,7 +396,12 @@
 
         <div class="item vague3">
           <div class="cont-img-port">
-            <img src="" alt="image projet" />
+            <img
+              src="./ressources/img-projets/site-gym.jpg"
+              width="800"
+              height="400"
+              alt="image projet"
+            />
           </div>
           <h3>Mon fabuleux projet</h3>
           <p>
@@ -516,8 +531,8 @@
             <div class="txt-slide">
               <p>
                 Avez-vous des dons de mentalist?, le but du jeu devinez le
-                numéro caché le plus vite possible en 1 et 20? Pour conserver le
-                meilleur score, pas si facile à toi de jouer!!!
+                numéro caché le plus vite possible en 1 et 20? Conserver le
+                meilleur score ne sera pas facile à vous de jouer!!!
               </p>
             </div>
           </a>
@@ -542,8 +557,8 @@
             <div class="txt-slide">
               <p>
                 Une petite faim, trouvez votre plat préféré à travers un large
-                choix de recette du monde, sorry les recettes de cette API ne
-                sont qu'en anglais mais avec les vidéos c'est easy!
+                choix de recette du monde. Les recettes de cette API ne sont
+                qu'en anglais mais avec les vidéos c'est easy!
               </p>
             </div>
           </a>
@@ -569,7 +584,7 @@
               <p>
                 Une petite blague à raconter, grâce à cette API spéciale humour
                 il y en aura pour tout le monde dans la joie et la bonne humeur
-                biensur!! Cliquez dessus pour en changer.
+                biensur important la détente!! Cliquez dessus pour en changer.
               </p>
             </div>
           </a>
@@ -598,8 +613,8 @@
               <p>
                 Besoin de relaxer le corps et l'esprit, rien de mieux de la Yoga
                 Routine. Vous avez 12 excercices de présenté, vous pouvez
-                maitrisez, l'ordre, le nombre, la durée appuyer sur commencer et
-                nasmasté.
+                maitrisez, l'ordre, le nombre, la durée et vous pouvez
+                commencer.
               </p>
             </div>
           </a>
@@ -620,9 +635,9 @@
       <div class="contact-background">
         <h2>Contacts</h2>
         <div class="btn">
-          <button class="btn-contact" type="button">
-            <a href="mailto:oliiv44@gmail.com">Me Contacter ✉️</a>
-          </button>
+          <a class="btn-contact" href="mailto:workwitholive33@gmail.com"
+            >Me Contacter ✉️</a
+          >
         </div>
         <div class="whatsapp">
           <div class="logo-whatsapp">
