ajout de pokebox et suppression what-watch

--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
             href="https://oliive33.github.io/projet-quiz-app-js/"
             class="btn-projets"
             target="_blank"
+            a
             >Découvrez le projet</a
           >
         </div>
@@ -473,10 +474,10 @@
         <strong>CSS</strong> et <strong>JavaScript</strong> natif. Il y a
         également 4 <strong>API</strong>(Application Programming Interface), qui
         vous permettrons d'avoir accès à des données de manière dynamique, comme
-        rechercher une idée de recette🍝, trouver un bon film🎬,le nombre
-        d'habitants par pays🌍, ainsi qu'une Api de blagues important la bonne
-        humeur😃, pour finir un mini projet relax la yoga routine🙏. En tout les
-        cas ce sont des exemples sur ce que je suis capable de faire en
+        rechercher une idée de recette🍝, trouver votre pokemon⚡ préféré,le
+        nombre d'habitants par pays🌍, ainsi qu'une Api de blagues important la
+        bonne humeur😃, pour finir un mini projet relax la yoga routine🙏. En
+        tout les cas ce sont des exemples sur ce que je suis capable de faire en
         <strong>JavaScript</strong> natif, tout ça n'est qu'un début car je suis
         en train de me former dans le framework JS <strong>React</strong>, et
         dans bien d'autres choses dans le domaine du front-end. Biensur je
@@ -517,9 +518,9 @@
             <hr />
             <div class="txt-slide">
               <p>
-                Ready pour lancer les dés! À deux joueurs ou contre toi même, le
-                player qui atteint 100 en 1er à gagné! Attention au chiffre 1,
-                tu peux passer ton tour pour conserver ta progression, Enjoy!
+                Ready pour lancer les dés ! À deux joueurs ou contre toi-même,
+                le player qui atteint 100 en 1er à gagné ! Attention au chiffre
+                1, tu peux passer ton tour pour conserver ta progression, Enjoy!
               </p>
             </div>
           </a>
@@ -543,9 +544,9 @@
             <hr />
             <div class="txt-slide">
               <p>
-                Le célèbre bird revient, cette fois c'est Floppy mais il n'a pas
-                vraiment changé s'aurez-vous le faire voler le plus loin
-                possible, et battre tout les records i believe i can fly.....
+                Le célèbre bird revient, cette fois, c’est Floppy mais il n'a
+                pas vraiment changé, s’ aurez-vous, le faire voler le plus loin
+                possible et battre tous les records i believe i can fly.....
               </p>
             </div>
           </a>
@@ -564,14 +565,14 @@
           </a>
         </div>
         <div class="slide s5">
-          <a href="https://oliive33.github.io/API-What-watch/" target="_blank">
-            <h3>Moovies</h3>
+          <a href="https://oliive33.github.io/Pokemon-API/" target="_blank">
+            <h3>Pokebox</h3>
             <hr />
             <div class="txt-slide">
               <p>
-                Une envie ciné, de nombreux films vous trouverez! Sur les
-                résumés vous ne pourrez cliquer! Avec une simple lettre, de
-                nombreuses idées de films à voir vous aurez.
+                Attrapez-les tous!!! Vous aimez les Pokémon ou vous êtes juste
+                curieux de découvrir leurs drôles de noms, alors partez à la
+                recherche de votre préféré. Moi, c’est Pikachu et vous ?
               </p>
             </div>
           </a>
@@ -613,8 +614,7 @@
               <p>
                 Besoin de relaxer le corps et l'esprit, rien de mieux de la Yoga
                 Routine. Vous avez 12 excercices de présenté, vous pouvez
-                maitrisez, l'ordre, le nombre, la durée et vous pouvez
-                commencer.
+                maitrisez, l'ordre, le nombre, la durée et namasté!
               </p>
             </div>
           </a>
