--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/ressources/favicon/favicon-16x16.png"
+      href="./ressources/favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="./ressources/favicon/site.webmanifest" />
-    <meta name="msapplication-TileColor" content="#da532c" />
+    <link
+      rel="mask-icon"
+      href="./ressources/favicon/safari-pinned-tab.svg"
+      color="#163391"
+    />
+    <meta name="msapplication-TileColor" content="#2b5797" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="preload" as="image" href="./ressources/accueil.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -55,7 +60,7 @@
     <nav class="nav-left">
       <div class="blocs-menu">
         <div class="cercle-portrait">
-          <img src="ressources/logo.png" alt="portrait img" />
+          <img src="ressources/logo-avatar.png" alt="logo image" />
         </div>
       </div>
 
@@ -178,8 +183,9 @@
             vous présente sur ce site et à travers mes projets ce que je suis
             capable de faire bien sur je continue d'apprendre en parallèle, car
             j'aime apprendre de nouvelles choses et acquérir de nouvelles
-            compétences(GreenSock, React...), opérationnel dès à présent pour
-            vos projets de site web alors n'hésitez pas 😉!
+            compétences nottamment dans le JavaScript(GreenSock, React...),
+            opérationnel dès à présent pour vos projets de site web alors
+            n'hésitez pas 😉!
           </p>
         </div>
         <div class="pres-droite">
@@ -300,7 +306,6 @@
             href="https://oliive33.github.io/projet-quiz-app-js/"
             class="btn-projets"
             target="_blank"
-            a
             >Découvrez le projet</a
           >
         </div>
