nouvelle modif favicon et avatar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Voici mon site web, portfolio de développeur Front-end CSS, JavaScript freelance"
     />
+    <link rel="canonical" href="" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -29,9 +30,9 @@
     <link
       rel="mask-icon"
       href="./ressources/favicon/safari-pinned-tab.svg"
-      color="#163391"
+      color="#5bbad5"
     />
-    <meta name="msapplication-TileColor" content="#2b5797" />
+    <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="preload" as="image" href="./ressources/accueil.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -550,7 +551,7 @@
             <div class="txt-slide">
               <p>
                 Le célèbre bird revient, cette fois, c’est Floppy mais il n'a
-                pas vraiment changé, s’ aurez-vous, le faire voler le plus loin
+                pas vraiment changé, s’aurez-vous le faire voler le plus loin
                 possible et battre tous les records i believe i can fly.....
               </p>
             </div>
@@ -596,14 +597,18 @@
           </a>
         </div>
         <div class="slide s7">
-          <a href="https://oliive33.github.io/API-Countries/" target="_blank">
-            <h3>How many people?</h3>
+          <a
+            href="https://oliive33.github.io/Quote-Generator-js/"
+            target="_blank"
+          >
+            <h3>Be or Not to Be!</h3>
             <hr />
             <div class="txt-slide">
               <p>
-                Vous aimez la géographie ou juste par curiosité, toujours utile
-                pour un quizz et sa culture générale découvrez les drapeaux et
-                la population des pays, le monde est petit!
+                Grâce à cette API de citations aléatoire en anglais, pour vous
+                aidez à réfléchir sur les grandes questions du monde ou juste
+                pour faire cool, vous pouvez postez les pensées qui vous
+                inspire.
               </p>
             </div>
           </a>
