--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Voici mon site web, portfolio de développeur Front-end CSS, JavaScript freelance"
+      content="Voici mon site web, portfolio de développeur Front-end, CSS, JavaScript freelance"
     />
-    <link rel="canonical" href="" />
+    <!-- <link rel="canonical" href="" /> -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -41,14 +41,9 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.min.css" />
   </head>
   <body>
-    <!-- Loader -->
-    <div class="container-loader">
-      <div class="loader"></div>
-    </div>
-
     <!-- Btn flottant left petit menu -->
     <div class="btn-rond-menu">
       <div class="cont-ligne">
@@ -112,6 +107,7 @@
           <div class="media media1">
             <img
               src="./ressources/github.svg"
+              sizes="30vw"
               width="30"
               height="30"
               srcset="./ressources/github.svg 20w, ./ressources/github.svg 30w"
@@ -127,6 +123,7 @@
           <div class="media media2">
             <img
               src="./ressources/linkedin.svg"
+              sizes="30vw"
               width="30"
               height="30"
               srcset="
@@ -142,6 +139,7 @@
           <div class="media media3">
             <img
               src="./ressources/insta.svg"
+              sizes="30vw"
               width="30"
               height="30"
               srcset="./ressources/insta.svg 20w, ./ressources/insta.svg 30w"
@@ -404,18 +402,24 @@
         <div class="item vague3">
           <div class="cont-img-port">
             <img
-              src="./ressources/img-projets/site-gym.jpg"
+              src="./ressources/img-projets/commerce.js.jpg"
               width="800"
               height="400"
               alt="image projet"
             />
           </div>
-          <h3>Mon fabuleux projet</h3>
+          <h3>Projet site E-Commerce</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
-            dolore?
+            Un projet réalisé grâce à <strong>React</strong>, avec en guest
+            <strong>commerce.js</strong> et le moyen de paiement
+            <strong> Stripe</strong>.
           </p>
-          <a href="#" class="btn-projets">Découvrez le projet</a>
+          <a
+            href="https://oliive33.github.io/projet-ecommerce-react/"
+            class="btn-projets"
+            target="_blank"
+            >Découvrez le projet</a
+          >
         </div>
       </div>
     </section>
@@ -427,22 +431,22 @@
 
       <div class="grille-skill">
         <div class="range-cont">
-          <p class="label-skill">HTML</p>
-          <p class="number-skill">95%</p>
+          <p class="label-skill">CSS</p>
+          <p class="number-skill">90%</p>
           <div class="barre-skill b1"></div>
           <div class="barre-grises"></div>
         </div>
 
         <div class="range-cont">
-          <p class="label-skill">CSS</p>
-          <p class="number-skill">90%</p>
+          <p class="label-skill">JavaScript</p>
+          <p class="number-skill">75%</p>
           <div class="barre-skill b2"></div>
           <div class="barre-grises"></div>
         </div>
 
         <div class="range-cont">
-          <p class="label-skill">JavaScript</p>
-          <p class="number-skill">70%</p>
+          <p class="label-skill">Tailwind</p>
+          <p class="number-skill">85%</p>
           <div class="barre-skill b3"></div>
           <div class="barre-grises"></div>
         </div>
@@ -463,7 +467,7 @@
 
         <div class="range-cont">
           <p class="label-skill">Bootstrap</p>
-          <p class="number-skill">80%</p>
+          <p class="number-skill">85%</p>
           <div class="barre-skill b6"></div>
           <div class="barre-grises"></div>
         </div>
@@ -480,15 +484,15 @@
         <strong>CSS</strong> et <strong>JavaScript</strong> natif. Il y a
         également 4 <strong>API</strong>(Application Programming Interface), qui
         vous permettrons d'avoir accès à des données de manière dynamique, comme
-        rechercher une idée de recette🍝, trouver votre pokemon⚡ préféré,le
-        nombre d'habitants par pays🌍, ainsi qu'une Api de blagues important la
-        bonne humeur😃, pour finir un mini projet relax la yoga routine🙏. En
-        tout les cas ce sont des exemples sur ce que je suis capable de faire en
-        <strong>JavaScript</strong> natif, tout ça n'est qu'un début car je suis
-        en train de me former dans le framework JS <strong>React</strong>, et
-        dans bien d'autres choses dans le domaine du front-end. Biensur je
-        mettrais à jour régulèrement mes projets sur ce site, et tout les
-        projets sont disponible sur mon profil
+        rechercher une idée de recette🍝, trouver votre pokemon⚡ préféré, ou
+        encore trouver l'inspiration avec l'API de citations💭 ainsi qu'une Api
+        de blagues important la bonne humeur😃, pour finir un mini projet relax
+        la yoga routine🙏. En tout les cas ce sont des exemples sur ce que je
+        suis capable de faire en <strong>JavaScript</strong> natif, tout ça
+        n'est qu'un début car je suis en train de me former dans le framework JS
+        <strong>React</strong>, et dans bien d'autres choses dans le domaine du
+        front-end. Biensur je mettrais à jour régulèrement mes projets sur ce
+        site, et tout les projets sont disponible sur mon profil
         <a href="https://github.com/Oliive33" target="_blank"
           ><strong>Github</strong>🔗</a
         >.
@@ -665,6 +669,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="app.js"></script>
+    <script src="app.min.js"></script>
   </body>
 </html>
