modifs responsive style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
       name="description"
       content="Voici mon site web, portfolio de développeur Front-end, CSS, JavaScript freelance"
     />
-    <!-- <link rel="canonical" href="" /> -->
+    <meta property="og:title" content="homemade-web" />
+    <meta property="og:type" content="portfolio" />
+    <meta
+      property="og:description"
+      content="Voici mon site web, portfolio de développeur Front-end, CSS, JavaScript freelance"
+    />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="http://ressoures/logo.png" />
+    <link rel="canonical" href="" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -67,12 +75,12 @@
       </div>
       <div class="blocs-menu">
         <span class="nav-menu-item">
-          <a href="#pres"> Présentation </a>
+          <a href="#presentation"> Présentation </a>
         </span>
       </div>
       <div class="blocs-menu">
         <span class="nav-menu-item">
-          <a href="#proj">Projets</a>
+          <a href="#projets">Projets</a>
         </span>
       </div>
       <div class="blocs-menu">
@@ -88,7 +96,7 @@
 
       <div class="blocs-menu">
         <div class="logo-cercle">
-          <a href="#contact">
+          <a href="mailto:olive.homemadeweb@gmail.com">
             <img class="mail" src="ressources/contact.svg" alt="logo contact" />
           </a>
         </div>
@@ -99,7 +107,7 @@
     <section class="accueil" id="accueil">
       <h1>Bienvenue sur mon portfolio</h1>
       <p class="txt-animation"></p>
-      <a href="#proj" class="btn-acc btn-acc1">Portfolio</a>
+      <a href="#projets" class="btn-acc btn-acc1">Portfolio</a>
       <a href="#range" class="btn-acc btn-acc2">Compétences</a>
 
       <div class="medias">
@@ -162,7 +170,7 @@
 
     <!-- Section Présentation -->
 
-    <section class="presentation" id="pres">
+    <section class="presentation" id="presentation">
       <h2 class="titre-pres">Présentation :</h2>
       <div class="container-presentation">
         <div class="fond-forme"></div>
@@ -219,7 +227,7 @@
 
     <!-- Section Projets -->
 
-    <section class="projets" id="proj">
+    <section class="projets" id="projets">
       <h2 class="titre-projet">Mes Projets</h2>
 
       <div class="cont-projets">
@@ -649,7 +657,7 @@
       <div class="contact-background">
         <h2>Contacts</h2>
         <div class="btn">
-          <a class="btn-contact" href="mailto:workwitholive33@gmail.com"
+          <a class="btn-contact" href="olive.homemadeweb@gmail.com"
             >Me Contacter ✉️</a
           >
         </div>
@@ -662,7 +670,9 @@
       </div>
     </section>
 
-    <footer>Tout Droits réservés &copy;</footer>
+    <footer>
+      &copy; Depuis le 08-08-2021 homemade-web.com Tout Droits réservés
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js"></script>
