--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
       <div class="blocs-menu">
         <div class="logo-cercle">
-          <a href="mailto:olive.homemadeweb@gmail.com">
+          <a href="mailto:olive@homemade-web.com">
             <img class="mail" src="ressources/contact.svg" alt="logo contact" />
           </a>
         </div>
@@ -657,7 +657,7 @@
       <div class="contact-background">
         <h2>Contacts</h2>
         <div class="btn">
-          <a class="btn-contact" href="olive.homemadeweb@gmail.com"
+          <a class="btn-contact" href="mailto:olive@homemade-web.com"
             >Me Contacter ✉️</a
           >
         </div>
