--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Portfolio</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -14,9 +15,8 @@
       property="og:description"
       content="Voici mon site web, portfolio de développeur Front-end, CSS, JavaScript freelance"
     />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="http://ressoures/logo.png" />
-    <link rel="canonical" href="" />
+    <meta property="og:url" content="https://homemade-web.com/" />
+    <meta property="og:image" content="https://ressoures/logo.png" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -42,7 +42,7 @@
     />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="preload" as="image" href="./ressources/accueil.jpg" />
+    <link rel="preload" as="image" href="./ressources/accueil.webp" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -157,7 +157,7 @@
           </div>
         </a>
       </div>
-      <a href="#pres">
+      <a href="#presentation">
         <div class="btn-rond">
           <img
             src="./ressources/arrowDown.svg"
@@ -343,10 +343,12 @@
         <div class="item vague2">
           <div class="cont-img-port">
             <img
-              src="ressources/img-projets/site-immobilier.jpg"
+              src="./ressources/img-projets/site-immobilier.jpg"
+              alt="image projet"
+              sizes="800vw"
               width="800"
               height="400"
-              alt="image projet"
+              srcset="./ressources/img-projets/site-immobilier.jpg"
             />
           </div>
           <h3>Projet site immobilier</h3>
@@ -671,7 +673,7 @@
     </section>
 
     <footer>
-      &copy; Depuis le 08-08-2021 homemade-web.com Tout Droits réservés
+      &copy; Depuis Août-2021 homemade-web.com Tout Droits réservés
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
