ajout dossier et fichiers

--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@
       <a href="#range" class="btn-acc btn-acc2">Compétences</a>
 
       <div class="medias">
-        <a href="https://github.com/Oliive33" target="_blank">
+        <a
+          href="https://github.com/Oliive33"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <div class="media media1">
             <img
               src="./ressources/github.svg"
@@ -124,9 +128,11 @@
             />
           </div>
         </a>
+
         <a
           href="https://www.linkedin.com/in/olivier-villevieille-25533014a/"
           target="_blank"
+          rel="noopener noreferrer"
         >
           <div class="media media2">
             <img
@@ -143,7 +149,11 @@
             />
           </div>
         </a>
-        <a href="https://www.instagram.com/oliive33/" target="_blank">
+        <a
+          href="https://www.instagram.com/oliive33/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <div class="media media3">
             <img
               src="./ressources/insta.svg"
@@ -188,9 +198,9 @@
             Suite à une reconversion pro suivi d'une formation de développeur
             web, je me lance en tant que développeur front-end en freelance, je
             vous présente sur ce site et à travers mes projets ce que je suis
-            capable de faire bien sur je continue d'apprendre en parallèle, car
+            capable de faire bien sûr je continue d'apprendre en parallèle, car
             j'aime apprendre de nouvelles choses et acquérir de nouvelles
-            compétences nottamment dans le JavaScript(GreenSock, React...),
+            compétences notamment dans le JavaScript(GreenSock, React...),
             opérationnel dès à présent pour vos projets de site web alors
             n'hésitez pas 😉!
           </p>
@@ -250,6 +260,7 @@
             href="https://oliive33.github.io/OlivierVillevieille_3_15022021/"
             class="btn-projets"
             target="_blank"
+            rel="noopener noreferrer"
             >Découvrez le projet</a
           >
         </div>
@@ -272,6 +283,7 @@
             href="https://oliive33.github.io/Projet-site-voyage/"
             class="btn-projets"
             target="_blank"
+            rel="noopener noreferrer"
             >Découvrez le projet</a
           >
         </div>
@@ -313,6 +325,7 @@
             href="https://oliive33.github.io/projet-quiz-app-js/"
             class="btn-projets"
             target="_blank"
+            rel="noopener noreferrer"
             >Découvrez le projet</a
           >
         </div>
@@ -336,6 +349,7 @@
             href="https://oliive33.github.io/Projet-site-de-sport/"
             class="btn-projets"
             target="_blank"
+            rel="noopener noreferrer"
             >Découvrez le projet</a
           >
         </div>
@@ -360,6 +374,7 @@
             href="https://oliive33.github.io/Projet-site-immobilier/"
             class="btn-projets"
             target="_blank"
+            rel="noopener noreferrer"
             >Découvrez le projet</a
           >
         </div>
@@ -383,6 +398,7 @@
             href="https://oliive33.github.io/Projet-site-hebergement-web/"
             class="btn-projets"
             target="_blank"
+            rel="noopener noreferrer"
             >Découvrez le projet</a
           >
         </div>
@@ -405,6 +421,7 @@
             href="https://oliive33.github.io/Projet-site-Bootstrap/"
             class="btn-projets"
             target="_blank"
+            rel="noopener noreferrer"
             >Découvrez le projet</a
           >
         </div>
@@ -428,6 +445,7 @@
             href="https://oliive33.github.io/projet-ecommerce-react/"
             class="btn-projets"
             target="_blank"
+            rel="noopener noreferrer"
             >Découvrez le projet</a
           >
         </div>
@@ -495,15 +513,18 @@
         également 4 <strong>API</strong>(Application Programming Interface), qui
         vous permettrons d'avoir accès à des données de manière dynamique, comme
         rechercher une idée de recette🍝, trouver votre pokemon⚡ préféré, ou
-        encore trouver l'inspiration avec l'API de citations💭 ainsi qu'une Api
-        de blagues important la bonne humeur😃, pour finir un mini projet relax
-        la yoga routine🙏. En tout les cas ce sont des exemples sur ce que je
+        encore trouver l'inspiration avec l'API de citations💭 ainsi Qu'une Api
+        de blagues, important la bonne humeur😃, pour finir un mini projet relax
+        la yoga routine🙏. Dans tout les cas ce sont des exemples sur ce que je
         suis capable de faire en <strong>JavaScript</strong> natif, tout ça
         n'est qu'un début car je suis en train de me former dans le framework JS
         <strong>React</strong>, et dans bien d'autres choses dans le domaine du
-        front-end. Biensur je mettrais à jour régulèrement mes projets sur ce
-        site, et tout les projets sont disponible sur mon profil
-        <a href="https://github.com/Oliive33" target="_blank"
+        front-end. Bien sûr je mettrais à jour régulièrement mes projets sur ce
+        site, et tous les projets sont disponible sur mon profil
+        <a
+          href="https://github.com/Oliive33"
+          target="_blank"
+          rel="noopener noreferrer"
           ><strong>Github</strong>🔗</a
         >.
       </p>
@@ -533,20 +554,28 @@
           </button>
         </div>
         <div class="slide s1">
-          <a href="https://oliive33.github.io/Pig-game/" target="_blank">
+          <a
+            href="https://oliive33.github.io/Pig-game/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <h3>Let's play!</h3>
             <hr />
             <div class="txt-slide">
               <p>
                 Ready pour lancer les dés ! À deux joueurs ou contre toi-même,
-                le player qui atteint 100 en 1er à gagné ! Attention au chiffre
+                le player qui atteint 100 en 1er a gagné ! Attention au chiffre
                 1, tu peux passer ton tour pour conserver ta progression, Enjoy!
               </p>
             </div>
           </a>
         </div>
         <div class="slide s2">
-          <a href="https://oliive33.github.io/Guess-my-num/" target="_blank">
+          <a
+            href="https://oliive33.github.io/Guess-my-num/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <h3>Numbers!!!</h3>
             <hr />
             <div class="txt-slide">
@@ -559,20 +588,28 @@
           </a>
         </div>
         <div class="slide s3">
-          <a href="https://oliive33.github.io/floppy-bird/" target="_blank">
+          <a
+            href="https://oliive33.github.io/floppy-bird/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <h3>I can fly...</h3>
             <hr />
             <div class="txt-slide">
               <p>
                 Le célèbre bird revient, cette fois, c’est Floppy mais il n'a
-                pas vraiment changé, s’aurez-vous le faire voler le plus loin
+                pas vraiment changé, saurez-vous le faire voler le plus loin
                 possible et battre tous les records i believe i can fly.....
               </p>
             </div>
           </a>
         </div>
         <div class="slide s4">
-          <a href="https://oliive33.github.io/API-Meals/" target="_blank">
+          <a
+            href="https://oliive33.github.io/API-Meals/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <h3>Recipes</h3>
             <hr />
             <div class="txt-slide">
@@ -585,7 +622,11 @@
           </a>
         </div>
         <div class="slide s5">
-          <a href="https://oliive33.github.io/Pokemon-API/" target="_blank">
+          <a
+            href="https://oliive33.github.io/Pokemon-API/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <h3>Pokebox</h3>
             <hr />
             <div class="txt-slide">
@@ -598,14 +639,18 @@
           </a>
         </div>
         <div class="slide s6">
-          <a href="https://oliive33.github.io/API-Jokes/" target="_blank">
+          <a
+            href="https://oliive33.github.io/API-Jokes/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <h3>I'm joking</h3>
             <hr />
             <div class="txt-slide">
               <p>
                 Une petite blague à raconter, grâce à cette API spéciale humour
                 il y en aura pour tout le monde dans la joie et la bonne humeur
-                biensur important la détente!! Cliquez dessus pour en changer.
+                bien sûr important la détente!! Cliquez dessus pour en changer.
               </p>
             </div>
           </a>
@@ -614,6 +659,7 @@
           <a
             href="https://oliive33.github.io/Quote-Generator-js/"
             target="_blank"
+            rel="noopener noreferrer"
           >
             <h3>Be or Not to Be!</h3>
             <hr />
@@ -631,6 +677,7 @@
           <a
             href="https://oliive33.github.io/Projet-Yoga-routine/"
             target="_blank"
+            rel="noopener noreferrer"
           >
             <h3>Namasté🙏</h3>
             <hr />
@@ -666,7 +713,8 @@
         <div class="whatsapp">
           <div class="logo-whatsapp">
             <img src="./ressources/whatpp.svg" alt="logo whatsapp" />
-            <span>+33 6 75 18 58 44</span>
+            <!-- <span>+33 6 75 18 58 44</span> -->
+            <a href="tel:+33 6 75 18 58 44">+33 6 75 18 58 44</a>
           </div>
         </div>
       </div>
