ajout lien whatsapp

--- a/index.html
+++ b/index.html
@@ -713,8 +713,9 @@
         <div class="whatsapp">
           <div class="logo-whatsapp">
             <img src="./ressources/whatpp.svg" alt="logo whatsapp" />
-            <!-- <span>+33 6 75 18 58 44</span> -->
-            <a href="tel:+33 6 75 18 58 44">+33 6 75 18 58 44</a>
+            <a href="https://api.whatsapp.com/send?phone=33675185844"
+              >+33 6 75 18 58 44</a
+            >
           </div>
         </div>
       </div>
