modifs sizes img

--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
         <div class="item vague1">
           <div class="cont-img-port">
             <img
+              srcset="
+                ressources/img-projets/ohmyfood.jpg  500w,
+                ressources/img-projets/ohmyfood.jpg  800w,
+                ressources/img-projets/ohmyfood.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+                  (max-width: 800px) 800px,
+                  1200px
+            "
               src="ressources/img-projets/ohmyfood.jpg"
               width="800"
               height="400"
@@ -268,6 +277,15 @@
         <div class="item vague1">
           <div class="cont-img-port">
             <img
+              srcset="
+                ressources/img-projets/kyoto.jpg  500w,
+                ressources/img-projets/kyoto.jpg  800w,
+                ressources/img-projets/kyoto.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
               src="ressources/img-projets/kyoto.jpg"
               width="800"
               height="400"
@@ -291,6 +309,15 @@
         <div class="item vague1">
           <div class="cont-img-port">
             <img
+              srcset="
+                ressources/img-projets/site-bankist.jpg  500w,
+                ressources/img-projets/site-bankist.jpg  800w,
+                ressources/img-projets/site-bankist.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
               src="ressources/img-projets/site-bankist.jpg"
               width="800"
               height="400"
@@ -310,6 +337,15 @@
         <div class="item vague2">
           <div class="cont-img-port">
             <img
+              srcset="
+                ressources/img-projets/quiz-js.jpg  500w,
+                ressources/img-projets/quiz-js.jpg  800w,
+                ressources/img-projets/quiz-js.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
               src="./ressources/img-projets/quiz-js.jpg"
               width="800"
               height="400"
@@ -333,6 +369,15 @@
         <div class="item vague2">
           <div class="cont-img-port">
             <img
+              srcset="
+                ressources/img-projets/site-gym.jpg  500w,
+                ressources/img-projets/site-gym.jpg  800w,
+                ressources/img-projets/site-gym.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
               src="ressources/img-projets/site-gym.jpg"
               width="800"
               height="400"
@@ -357,6 +402,15 @@
         <div class="item vague2">
           <div class="cont-img-port">
             <img
+              srcset="
+                ressources/img-projets/site-immobilier.jpg  500w,
+                ressources/img-projets/site-immobilier.jpg  800w,
+                ressources/img-projets/site-immobilier.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
               src="./ressources/img-projets/site-immobilier.jpg"
               alt="image projet"
               sizes="800vw"
@@ -382,6 +436,15 @@
         <div class="item vague3">
           <div class="cont-img-port">
             <img
+              srcset="
+                ressources/img-projets/site-hebergementweb.jpg  500w,
+                ressources/img-projets/site-hebergementweb.jpg  800w,
+                ressources/img-projets/site-hebergementweb.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
               src="ressources/img-projets/site-hebergementweb.jpg"
               width="800"
               height="400"
@@ -406,6 +469,15 @@
         <div class="item vague3">
           <div class="cont-img-port">
             <img
+              srcset="
+                ressources/img-projets/site-bootstrap.jpg  500w,
+                ressources/img-projets/site-bootstrap.jpg  800w,
+                ressources/img-projets/site-bootstrap.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
               src="ressources/img-projets/site-bootstrap.jpg"
               width="800"
               height="400"
@@ -429,6 +501,15 @@
         <div class="item vague3">
           <div class="cont-img-port">
             <img
+              srcset="
+                ressources/img-projets/commerce.js.jpg  500w,
+                ressources/img-projets/commerce.js.jpg  800w,
+                ressources/img-projets/commerce.js.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
               src="./ressources/img-projets/commerce.js.jpg"
               width="800"
               height="400"
