modif reponsive mobile

--- a/index.html
+++ b/index.html
@@ -329,7 +329,11 @@
             Projet réalisé en <strong>JavaScript</strong> natif, il provient de
             ma formation JS réalisée sur Udemy en Anglais.
           </p>
-          <a href="https://oliive33.github.io/Bankist-Dom/" class="btn-projets"
+          <a
+            href="https://oliive33.github.io/Bankist-Dom/"
+            class="btn-projets"
+            target="_blank"
+            rel="noopener noreferrer"
             >Découvrez le projet</a
           >
         </div>
