--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
           <p>
             Je m'appelle Olivier, j'ai 33 ans et je vis actuellement en France.
             Suite à une reconversion pro suivi d'une formation de développeur
-            web, je me lance en tant que développeur front-end en freelance, je
-            vous présente sur ce site et à travers mes projets ce que je suis
-            capable de faire bien sûr je continue d'apprendre en parallèle, car
-            j'aime apprendre de nouvelles choses et acquérir de nouvelles
-            compétences notamment dans le JavaScript(GreenSock, React...),
-            opérationnel dès à présent pour vos projets de site web alors
-            n'hésitez pas 😉!
+            web, je me lance en tant que développeur front-end en freelance. Mes
+            expériences professionnelles passées, m'aident beaucoup aujourd’hui
+            pour une écoute et un service de qualité. Je vous présente sur ce
+            site et à travers mes projets ce que je suis capable de faire en
+            JavaScript natif. J'ai également des compétences avec des library
+            JS(GreenSock, React...), opérationnel dès à présent pour vos projets
+            de site web alors n'hésitez pas😉 à me contacter pour en discuter !
           </p>
         </div>
         <div class="pres-droite">
@@ -593,19 +593,18 @@
       <p>
         Je vous présente ce slider, fait avec l'aide de la library Js GSAP,
         <strong>Greensocks</strong>. Ce slider contient des
-        <strong>jeux</strong> au nombre de trois, ils sont fait en
+        <strong>jeux</strong> au nombre de trois, ils sont faits en
         <strong>CSS</strong> et <strong>JavaScript</strong> natif. Il y a
         également 4 <strong>API</strong>(Application Programming Interface), qui
         vous permettrons d'avoir accès à des données de manière dynamique, comme
         rechercher une idée de recette🍝, trouver votre pokemon⚡ préféré, ou
         encore trouver l'inspiration avec l'API de citations💭 ainsi Qu'une Api
         de blagues, important la bonne humeur😃, pour finir un mini projet relax
-        la yoga routine🙏. Dans tout les cas ce sont des exemples sur ce que je
+        la yoga routine🙏. Dans tous les cas ce sont des exemples sur ce que je
         suis capable de faire en <strong>JavaScript</strong> natif, tout ça
-        n'est qu'un début car je suis en train de me former dans le framework JS
-        <strong>React</strong>, et dans bien d'autres choses dans le domaine du
-        front-end. Bien sûr je mettrais à jour régulièrement mes projets sur ce
-        site, et tous les projets sont disponible sur mon profil
+        n'est qu'un début, car je proposerai des projets avec le framework JS
+        <strong>React</strong>. Bien sûr, je mettrais à jour régulièrement mes
+        projets sur ce site, et tous les projets sont disponibles sur mon profil
         <a
           href="https://github.com/Oliive33"
           target="_blank"
